syntax = "proto2";



package pb;

message LogMessage {
    required string logName=1;
    required bytes content=2; //日志内容 json格式
}
